[package]
name = "data_structure_with_colin"
version = "0.1.0"
authors = ["Bastian <bastian@cmbt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dev-dependencies]
rand = "0.6.5"
itertools = "0.8"
quickcheck = "0.8"
quickcheck_macros = "0.8"